<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- app title (branding) -->
    <string name="app_name">HEXRGB+</string>

    <!-- nothing here -->
    <string name="str_blank"></string>

    <!-- button label for black -->
    <string name="str_black">B</string>

    <!-- button label for white -->
    <string name="str_white">W</string>

    <!-- button label: parade mode -->
    <string name="str_parade">PRD</string>

    <!-- button color set -->
    <string name="str_sethex">SET</string>

    <!-- default hex color is white -->
    <string name="str_hex_default_value">FFFFFF</string>

    <!-- hex hashtag -->
    <string name="str_hashtag">#</string>

    <!-- rgb default value for EditText view -->
    <string name="str_rgb_default_value">255</string>

    <!-- button save box set -->
    <string name="str_nothingsaved">--</string>

    <!-- color palette reset -->
    <string name="str_fadetoblack">All color palette boxes set to BLACK.</string>
    <string name="str_fadetowhite">All color palette boxes set to WHITE.</string>

    <!-- color name -->
    <string name="str_colorname_tip">Use drop down menu to choose a new color.</string>
    <string name="str_colorname_selected"> selected.</string>

    <!-- TIP: parade mode -->
    <string name="str_parademode_tip">Parade Mode: Drag any slider, others follow.</string>

    <!-- TIP: Savebox success. -->
    <string name="str_savebox_tip">Color saved.</string>
    <string name="str_action_share">Send Palette to:</string>

    <!-- placeholders -->
    <string name="str_placeholder_hex">000000</string>
    <string name="str_placeholder_rgb">0</string>

</resources>